# Roboto-SAI-Fuego

./: .copilotignore  .dockerignore  .env.example  .gitignore  DOCKER-SETUP.md  DOCKER.md  Dockerfile  GUARDRAILS.md  README.md  README_INTEGRATION.md  backend_deploy.json  backend_deploy_latest.json  backend_deploy_status.json  backend_deploys.json  backend_env_vars.example.json  backend_headers.txt  backend_patch.json  backend_payload.json  backend_port_patch.json  backend_service_check.json  docker-compose.yml  docker-start.ps1  docker-start.sh  eslint.config.js  fix_grok_llm.py  fix_grok_llm_init.py  frontend_deploy.json  frontend_deploy_latest.json  frontend_deploys.json  frontend_payload.json  frontend_port_patch.json  frontend_service_check.json  index.html  owner.json  package-lock.json  package.json  render.yaml  render.yml  services_list.json  tailwind.config.ts  (+2 more)
.devcontainer/: devcontainer.json  docker-compose.devcontainer.json
.lovable/: plan.md
backend/: Dockerfile  Roboto_Ai4.py  Roboto_SAI.py  advanced_emotion_simulator.py  anchored_identity_gate.py  bootstrap.py  db.py  entrypoint.sh  grok_llm.py  langchain_memory.py  main.py  memory_system.py  models.py  persistent_memory_store.py  real_time_data_system.py  requirements.txt  roboto_autonomy_config.py  self_code_modification.py  (+1 more)
workspaces/roboto-sai-sdk/roboto-sai-sdk/: client.py  pyproject.toml  requirements.txt  setup.py
workspaces/roboto-sai-sdk/roboto-sai-sdk/examples/: chat_with_memory.py
workspaces/roboto-sai-sdk/roboto-sai-sdk/roboto_sai_sdk/: __init__.py  constants.py  memory.py  utils.py
(+48 files in other folders)
