# SPDX-License-Identifier: MIT OR Apache-2.0 or Custom\n# See R:\\Repos\\SAI Docs\\SAI-Documentation\\LICENCES for full license texts.\n# Roboto SAI SDK - Licensed for Roboto SAI L.L.C. (Roberto Villarreal Martinez)\n\n[build-system]\nrequires = [\"setuptools>=61.0\", \"wheel\"]\nbuild-backend = \"setuptools.build_meta\"\n\n[project]\nname = \"roboto-sai-sdk\"\ndynamic = [\"version\"]\nversion = \"0.1.0\"\ndescription = \"Python SDK for Roboto SAI platform\"\nreadme = \"README.md\"\nrequires-python = \">=3.9\"\nlicense = {text = \"MIT OR Apache-2.0\"}\nauthors = [{name = \"Roberto Villarreal Martinez\", email = \"roberto@roboto-sai.com\"}]\nmaintainers = [{name = \"Roboto SAI L.L.C.\"}]